# traffic-orchestrator

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  test.py  traffic-orchestrator.cpp
cartographer/: mapper.cpp
cartographer/include/: mapper.h
cartographer/maps/: maps.json
connectors/: CMakeLists.txt  network_manager.cpp  protocol.cpp  tcp_interface.cpp  udp_interface.cpp  websocket_server.cpp
connectors/include/: network_manager.h  protocol.h  tcp_interface.h  udp_interface.h  websocket_server.h
containers/: CMakeLists.txt  telemetry_data.hpp
maps/: maps.json
webview/: index.html  style.css  track.js
